# grimstabot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.Docker.md  compose.yaml  fly.toml  test.db
.github/workflows/: rust.yml
.sqlx/: query-2518ca52056a1eb822f459d1c2fc089f90293c076c2fc9d46f36abdde0563c09.json  query-2ebeed475b1afaa6c2dfc3599e1fa9e197261bd061a806055eac194f51cc26fc.json  query-444e19df975c492f317d34ce609fe849b41ac883cb1d1b35aa56da748d92bb49.json  query-485392903d2c7c5aebe4f5b9a2ecdc0aedc40c9178f0b10356358f5efb1a7238.json  query-5d6b782b58387bc81bbc10c341dfd1be614217094a0238b6262d670c270887c9.json  query-6612d08998939f91744d3e0036a9b403d4ff49f6e6bae239fa9bf1383aee8584.json  query-948840aff019a1736338f6a77afb0bd1eae15ae8c475932a343165f3a94399a4.json  query-abef9c3a0a9b457b541e9d58cb926dbe5b900d3178710e1cccdb47afa8963793.json  query-eb8a38bc98ad25466e5c012fe433205c637f24bdb9ff080e3df2fba7644ad083.json  query-ee8886518bf97279611912518c19e1af1f39b14bee26347f95e5c25d32fcfe16.json  query-f45d33222e8a04253ff439bf29e27bf5dbca15590d4b07d1ced750b4a9e0a63b.json
migrations/: 20250409202011_initial.sql  20250410084750_ingredients.sql  20250411124728_update_ica_butter.sql  20250411200826_cheapest_ingredients_view.sql  20250412170935_willys.sql  20250412205947_rename_willys_to_axfood.sql  20250412210300_add_hemkop.sql  20250413072836_mathem.sql  20250422073640_aliases.sql  20250910144041_only_ica_ids.sql
src/: lib.rs  main.rs  storage.rs
src/commands/: hakan.rs  mod.rs
src/commands/hakan/: mod.rs  recipe.rs  role.rs  stock.rs  wr.rs
src/hakan/: axfood.rs  coop.rs  db.rs  ica.rs  mathem.rs  mod.rs  plot.rs  update.rs
